영상화 merge 1차 테스트